RESOLVED FIXED257324
REGRESSION(2.41): [GTK] Contents not rendered in new web view when realized after configure and frame
https://bugs.webkit.org/show_bug.cgi?id=257324
Summary REGRESSION(2.41): [GTK] Contents not rendered in new web view when realized a...
Carlos Garcia Campos
Reported 2023-05-25 06:06:17 PDT
In case of realize happening after the configure and frame, we create a committed source, but it's not ready for rendering.
Attachments
Carlos Garcia Campos
Comment 1 2023-05-25 06:12:39 PDT
EWS
Comment 2 2023-05-25 22:24:15 PDT
Committed 264558@main (c60b4c7731a1): <https://commits.webkit.org/264558@main> Reviewed commits have been landed. Closing PR #14346 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.