REGRESSION(2.41): [GTK] Contents not rendered in new web view when realized after configure and frame https://bugs.webkit.org/show_bug.cgi?id=257324

Reviewed by Michael Catanzaro.

In case of realize happening after the configure and frame, we create a
committed source, but it's not ready for rendering. This patch splits
the swap method into swap and prepareForRendering. When a new frame is
available we always do swap, to be in sync with the web process, but only
prepareForRendering when view is realized. When realize happens after the
configure and frame we only need to call prepareForRendering().

* Source/WebKit/UIProcess/gtk/AcceleratedBackingStoreDMABuf.cpp:
(WebKit::AcceleratedBackingStoreDMABuf::Texture::~Texture):
(WebKit::AcceleratedBackingStoreDMABuf::Texture::swap):
(WebKit::AcceleratedBackingStoreDMABuf::Surface::map const):
(WebKit::AcceleratedBackingStoreDMABuf::Surface::swap):
(WebKit::AcceleratedBackingStoreDMABuf::Surface::prepareForRendering):
(WebKit::AcceleratedBackingStoreDMABuf::frame):
(WebKit::AcceleratedBackingStoreDMABuf::realize):
* Source/WebKit/UIProcess/gtk/AcceleratedBackingStoreDMABuf.h:

Canonical link: https://commits.webkit.org/264558@main